--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       // Coloque a última fruta da array acima em uma variável,
       // sem remover a mesma da array.
 
-      var ultimaFruta = frutas.pop();
+      var ultimaFruta = frutas[4];
       console.log("A última fruta da array é: " + ultimaFruta);
     </script>
   </body>
